--- a/myself/1_openai_features_and_functionality/3_how_to_count_tokens_using_tiktoken.ipynb
+++ b/myself/1_openai_features_and_functionality/3_how_to_count_tokens_using_tiktoken.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_tokens_from_string(\"tiktoken is great!\", \"o200k_base\")"
+    "num_tokens_from_string(\"tiktoken is great!\", \" \")"
    ]
   },
   {
