--- a/myself/1_openai_features_and_functionality/1_responses_api_and_messages.ipynb
+++ b/myself/1_openai_features_and_functionality/1_responses_api_and_messages.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bf31d299",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install tiktoken openai --quiet --upgrade"
+    "# %pip install tiktoken openai --quiet --upgrade"
    ]
   },
   {
@@ -75,24 +67,16 @@
     "# Create an OpenAI client instance\n",
     "client = OpenAI(\n",
     "    # Replace with your actual API key or use: api_key=os.environ.get(\"OPENAI_API_KEY\")\n",
-    "    api_key=\"YOUR_API_KEY_HERE\"\n",
+    "    api_key=\"\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dfb82a3c-3f4d-4ea9-9ee1-df10e120eb79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assistant response: Orange who?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Construct a conversation history manually for a knock-knock joke\n",
     "history = [\n",
@@ -102,6 +86,7 @@
     "]\n",
     "\n",
     "# Create a response using the conversation history\n",
+    "#maintain continuity of the conversation. by sending the entire conversation context (previous user and model messages) \n",
     "response = client.responses.create(\n",
     "    model=MODEL,\n",
     "    input=history\n",
@@ -127,31 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c5421d6f-1918-4dca-9c7d-937d33142d42",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Joke: Sure! Here’s a joke for you:\n",
-      "\n",
-      "Why don’t skeletons fight each other?\n",
-      "\n",
-      "Because they don’t have the guts!\n",
-      "Another joke: Of course! Here’s another one:\n",
-      "\n",
-      "Why was the math book sad?\n",
-      "\n",
-      "Because it had too many problems!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start a new conversation with an initial joke request\n",
     "history = [\n",
-    "    {\"role\": \"user\", \"content\": \"tell me a joke\"}\n",
+    "    {\"role\": \"user\", \"content\": \"tell me a sports joke\"}\n",
     "]\n",
     "\n",
     "response = client.responses.create(\n",
@@ -230,7 +198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
